# student-learning-analytics

./: .dockerignore  .env.example  .gitignore  IMPROVEMENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  phase1.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
dags/: dag_indicators.py  dag_ingest.py  dag_transform.py
dashboard/: Home.py  api_client.py
dashboard/pages/: 1_Student_List.py  2_Student_Detail.py  3_At_Risk.py
data/pedagogy/: help_seeking_strategies.md  interpreting_quiz_feedback.md  motivation_and_learning.md  self_regulated_learning.md  study_habits_research.md  time_management.md
docker/: airflow-requirements.txt  airflow.Dockerfile  api.Dockerfile  streamlit.Dockerfile
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/at-risk/: page.tsx
frontend/app/students/: page.tsx
frontend/components/: api-error-banner.tsx  feedback-panel.tsx  kpi-card.tsx  nav.tsx  page-header.tsx  theme-toggle.tsx
frontend/components/charts/: indicator-radar.tsx  overview-charts.tsx  quiz-trend-line.tsx  session-heatmap.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  skeleton.tsx  table.tsx
frontend/lib/: api.ts  types.ts  use-api.ts  utils.ts
n8n/: README.md  credentials.example.json
n8n/workflows/: 00_smoke_test.json  01_at_risk_alert.json  02_weekly_feedback.json  03_pipeline_trigger_monitor.json  04_teacher_review.json  05_new_student_onboarding.json
sql/: 00_databases.sql  01_schema.sql  02_indexes.sql
src/sla/: __init__.py  config.py  db.py
src/sla/api/: __init__.py  airflow_client.py  deps.py  main.py  schemas.py
src/sla/dq/: __init__.py  checks.py
tests/: conftest.py  test_api.py  test_dq.py  test_indicators.py  test_rag.py  test_simulate.py
(+16 files in other folders)
