[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sla"
version = "0.1.0"
description = "Student Learning Analytics & AI Feedback System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mohammed Rizwan" }]

# Core dependencies needed by the shared `sla` package (Phase 1 onward).
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "Faker>=25.0,<31.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
]

[project.optional-dependencies]
# Database + ETL helpers (Phase 2/3).
db = [
    "SQLAlchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
]
# FastAPI backend (Phase 4). Frontend-agnostic JSON API consumed by
# Streamlit now and a separate Next.js app later (CORS enabled).
api = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
]
# RAG pipeline (Phase 4).
rag = [
    "langchain>=0.2,<0.4",
    "langchain-openai>=0.1,<0.3",
    "langchain-community>=0.2,<0.4",
    "chromadb==0.5.23",  # pinned to match the chromadb/chroma:0.5.23 server image
    "openai>=1.30,<2.0",
]
# Streamlit dashboard (Phase 5).
dashboard = [
    "streamlit>=1.36,<2.0",
    "plotly>=5.22,<6.0",
    "requests>=2.32,<3.0",
]
# Tooling.
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
sla-simulate = "sla.simulate.generate:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sla"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "dags", "dashboard"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -q"
